--- a/fo4-taxcalculator/index.html
+++ b/fo4-taxcalculator/index.html
@@ -10,13 +10,14 @@
     <script>
         let recognized = false;
 
-        document.onload = function() {
+        document.addEventListener('DOMContentLoaded', function() {
+            console.log(window.location.hostname);
             if (window.location.hostname != 'files.alan.imdeo.kr') {
                 var menu = document.getElementById('menu_page');
                 menu.innerHTML = '원본 페이지';
                 menu.href = 'https://files.alan.imdeo.kr/fo4-taxcalculator';
             }
-        }
+        }, false);
 
         document.onpaste = function(event){
             var items = (event.clipboardData || event.originalEvent.clipboardData).items;
