--- a/fo4-taxcalculator/index.html
+++ b/fo4-taxcalculator/index.html
@@ -205,6 +205,8 @@
                 <label class="form-check-label align-top" for="pcroom">이미지 보기</label>
             </div>
             <img id="image" style="visibility: hidden;">
+            <br><br>
+            <footer class="text-center">&copy; 2021 Alanimdeo</footer>
         </div>
     </body>
 </html>
