FO4 TaxCalculator: 주소 바꾸는 거 하나 빼먹음

--- a/fo4-taxcalculator/index.html
+++ b/fo4-taxcalculator/index.html
@@ -30,7 +30,7 @@
     // 사이트 로딩 완료 이벤트
     document.addEventListener("DOMContentLoaded", () => {
       // 미러 페이지일 경우 내비게이션 바 수정
-      if (window.location.hostname != "files.alan.imdeo.kr") {
+      if (window.location.hostname != "pages.alan.imdeo.kr") {
         const menu = document.getElementById("menu_page");
         menu.innerHTML = "원본 페이지";
         menu.href = "https://pages.alan.imdeo.kr/fo4-taxcalculator";
